--- a/index.html
+++ b/index.html
@@ -202,4 +202,135 @@ const QUESTIONS = [
     options: [
       ["Commenta ironicamente dietro le quinte come la Giallapa's Band", "Pesce Gatto"],
       ["Racconta vecchi aneddoti e fa riflettere tutti", "Storione"],
-      ["Fa partire i brindisi e mette d’accordo t]()
+      ["Fa partire i brindisi e mette d’accordo tutti", "Carpa"],
+      ["Sparisce un’ora e poi ricompare con una storia assurda", "Anguilla"],
+      ["Tiene banco raccontando storie e battute", "Siluro"]
+    ]},
+  { q: "Domanda 7: Ti propongono un viaggio last-minute. Come reagisci?",
+    options: [
+      ["Accetto solo se il viaggio è offerto", "Pesce Gatto"],
+      ["Parto solo se c’è un programma chiaro e definito", "Storione"],
+      ["Chiamo gli amici e organizziamo in gruppo", "Carpa"],
+      ["Scelgo le esperienze più strane da fare", "Anguilla"],
+      ["Mi gaso, sarà un’avventura piena di adrenalina", "Siluro"]
+    ]}
+];
+
+/* ====== DOM ====== */
+const form = document.getElementById('quiz-form');
+const qWrap = document.getElementById('questions-wrap');
+const progress = document.getElementById('progress-bar');
+const resultEl = document.getElementById('result');
+const badgesEl = document.getElementById('result-badges');
+const titleEl = document.getElementById('result-title');
+const textEl = document.getElementById('result-text');
+const btnAgain = document.getElementById('btn-again');
+const btnCopy = document.getElementById('btn-copy');
+
+/* ====== RENDER DOMANDE ====== */
+function renderQuestions(){
+  let html = '';
+  QUESTIONS.forEach((item, idx) => {
+    const qId = `q${idx+1}`;
+    html += `<fieldset class="q"><legend class="hidden">Domanda ${idx+1}</legend>`;
+    html += `<h3>${item.q}</h3>`;
+    html += `<div class="options" role="radiogroup">`;
+    item.options.forEach((op, oi) => {
+      const id = `${qId}-opt${oi+1}`;
+      html += `<label class="option" for="${id}">
+        <input type="radio" name="${qId}" id="${id}" value="${op[1]}" required />
+        <span>${op[0]}</span>
+      </label>`;
+    });
+    html += `</div></fieldset>`;
+  });
+  qWrap.innerHTML = html;
+}
+renderQuestions();
+
+/* ====== PROGRESS ====== */
+function updateProgress(){
+  const total = QUESTIONS.length + 2;
+  let count = 0;
+  const data = new FormData(form);
+  if(data.get('nomeCognome')) count++;
+  if(data.get('cittaProvincia')) count++;
+  for(let i=1;i<=QUESTIONS.length;i++){ if(data.get('q'+i)) count++; }
+  progress.style.width = Math.round(count/total*100) + '%';
+}
+form.addEventListener('input', updateProgress);
+updateProgress();
+
+/* ====== RISULTATO ====== */
+function computeResult(){
+  const data = new FormData(form);
+  const scores = {"Pesce Gatto":0,"Siluro":0,"Storione":0,"Carpa":0,"Anguilla":0};
+  const missing = [];
+  if(!data.get('nomeCognome')) missing.push("Nome e Cognome");
+  if(!data.get('cittaProvincia')) missing.push("Città e Provincia");
+  QUESTIONS.forEach((_, i) => {
+    const key = `q${i+1}`;
+    const val = data.get(key);
+    if(!val){ missing.push("Domanda " + (i+1)); }
+    else { scores[val]++; }
+  });
+  if(missing.length){
+    alert("Compila tutti i campi (mancano: " + missing.join(", ") + ").");
+    return null;
+  }
+  const max = Math.max(...Object.values(scores));
+  const winners = Object.entries(scores).filter(([k,v]) => v === max).map(([k]) => k);
+  return {scores, winners};
+}
+
+function tieKey(a,b){ return [a,b].sort().join("|"); }
+
+function showResult(winners){
+  let title, text, badgesHtml;
+  if (winners.length === 1) {
+    const w = winners[0];
+    title = "Risultato: " + FISH[w].title;
+    text  = FISH[w].text;
+    badgesHtml = `<span class="badge">🏅 ${FISH[w].title}</span>`;
+  } else if (winners.length === 2) {
+    const key = tieKey(winners[0], winners[1]);
+    const tie = TIE_RESULTS[key];
+    if (tie) { title = tie.title; text = tie.text; }
+    else {
+      title = "Risultato: Mix " + winners.join(" + ");
+      text  = "Parità perfetta tra stili diversi: unisci qualità complementari e ti adatti alle situazioni con naturalezza.";
+    }
+    badgesHtml = winners.map(w => `<span class="badge">🏅 ${FISH[w].title}</span>`).join(" ");
+  } else {
+    const elenco = winners.map(w => FISH[w].title).join(", ");
+    title = "Risultato: Mix bilanciato";
+    text  = "In te convivono più energie: " + elenco + ". Hai un profilo versatile e sfaccettato: sai quando spingere, quando ascoltare, quando alleggerire e quando sorprendere. Il tuo equilibrio è la tua forza.";
+    badgesHtml = winners.map(w => `<span class="badge">🏅 ${FISH[w].title}</span>`).join(" ");
+  }
+  badgesEl.innerHTML = badgesHtml;
+  titleEl.textContent = title;
+  textEl.textContent  = text;
+  resultEl.style.display = "block";
+  resultEl.scrollIntoView({behavior:"smooth"});
+}
+
+/* ====== HANDLERS ====== */
+form.addEventListener('submit', (e) => {
+  e.preventDefault();
+  const r = computeResult(); if(!r) return;
+  showResult(r.winners);
+});
+document.getElementById('btn-reset').addEventListener('click', ()=>{
+  form.reset(); updateProgress(); resultEl.style.display="none";
+});
+btnAgain.addEventListener('click', ()=>{
+  form.reset(); updateProgress(); resultEl.style.display="none";
+  window.scrollTo({top:0, behavior:"smooth"});
+});
+btnCopy.addEventListener('click', async ()=>{
+  const t = (titleEl.textContent||"") + "\n\n" + (textEl.textContent||"");
+  try{ await navigator.clipboard.writeText(t); btnCopy.textContent="✅ Copiato"; setTimeout(()=>btnCopy.textContent="Copia risultato",1200); }catch{}
+});
+  </script>
+</body>
+</html>
