--- a/index.html
+++ b/index.html
@@ -113,46 +113,16 @@ const FISH = {
 
 /* ====== MIX a 2 (parità) ====== */
 const TIE_RESULTS = {
-  "Anguilla|Carpa": {
-    title: "Mix: ANGUILLA + CARPA",
-    text: "Sei un connettore creativo. Hai il gusto dell’imprevisto ma senza perdere la gentilezza: cerchi l’armonia nel gruppo e allo stesso tempo sparigli con idee originali che fanno sorridere e riflettere. Con te le persone si sentono a proprio agio, perché riesci a combinare empatia e fantasia: sai coinvolgere, proporre alternative e trasformare un incontro normale in qualcosa di speciale."
-  },
-  "Anguilla|Pesce Gatto": {
-    title: "Mix: ANGUILLA + PESCE GATTO",
-    text: "Ironia e immaginazione ti vengono naturali. Prendi la vita con leggerezza ma non per questo sei superficiale: la tua creatività spunta dove gli altri vedono routine, e spesso sei tu a cambiare l’umore di una stanza con una battuta o un’idea fuori dal coro. Spontaneo, versatile, sorprendi senza fare rumore e lasci dietro di te buonumore e curiosità."
-  },
-  "Anguilla|Siluro": {
-    title: "Mix: ANGUILLA + SILURO",
-    text: "Visione e azione: sogni soluzioni diverse e poi trovi il modo di farle accadere davvero. Hai il coraggio di osare e la fantasia per tracciare strade nuove. Guida naturale, ma mai scontata: la tua energia è magnetica e inviti gli altri a buttarsi in esperienze che raccontano chi sei, con una scintilla di sana follia."
-  },
-  "Anguilla|Storione": {
-    title: "Mix: ANGUILLA + STORIONE",
-    text: "Originale con profondità. Ami esplorare strade non battute, ma lo fai con giudizio e memoria. Sai dare un senso alle novità, collegandole a ciò che conta davvero. Le persone si fidano di te perché unisci creatività e saggezza: non cerchi solo l’effetto wow, ma un significato che resti."
-  },
-  "Carpa|Pesce Gatto": {
-    title: "Mix: CARPA + PESCE GATTO",
-    text: "Il tuo superpotere è portare leggerezza nelle relazioni. Fai gruppo, smorzi i conflitti e ricordi agli altri che si può stare bene anche nelle piccole cose. Sei accogliente e scanzonato al punto giusto: con te, ogni cena ha il suo momento di risate sincere e feeling vero."
-  },
-  "Carpa|Siluro": {
-    title: "Mix: CARPA + SILURO",
-    text: "Guida e ascolto: sai tenere il timone senza perdere di vista chi hai accanto. Pratico, deciso, ma capace di creare unità: trasformi gli obiettivi in azione e ti assicuri che tutti si sentano parte del viaggio. Il risultato? Una spinta in avanti che non schiaccia nessuno."
-  },
-  "Carpa|Storione": {
-    title: "Mix: CARPA + STORIONE",
-    text: "Stabilità che rassicura. Dai valore a tradizioni, memoria e qualità del tempo insieme. Quando c’è bisogno di equilibrio, sei il punto fermo: ascolti, organizzi, riporti calma. Le persone ti cercano perché con te ritrovano serenità e chiarezza, senza bisogno di grandi effetti speciali."
-  },
-  "Pesce Gatto|Siluro": {
-    title: "Mix: PESCE GATTO + SILURO",
-    text: "Carisma con sorriso. Ti butti nelle cose e trascini gli altri, ma con quella ironia che rende tutto più leggero. Sei energia che unisce: sai alleggerire la tensione, motivare e accendere l’entusiasmo del gruppo. Impossibile non seguirti — e divertirsi."
-  },
-  "Pesce Gatto|Storione": {
-    title: "Mix: PESCE GATTO + STORIONE",
-    text: "Leggerezza consapevole. Sai quando scherzare e quando andare a fondo: alterni momenti ironici a riflessioni che restano. Stai bene nelle tradizioni, ma ci metti il tuo tocco brillante. Il risultato è un equilibrio unico tra profondità e spontaneità."
-  },
-  "Siluro|Storione": {
-    title: "Mix: SILURO + STORIONE",
-    text: "Decisione con visione lunga. Prendi in mano le situazioni con fermezza e responsabilità, ragionando sul quadro d’insieme. Affidabile e autorevole, ispiri fiducia perché unisci coraggio e prudenza: sai accelerare quando serve, ma con una rotta chiara."
-  }
+  "Anguilla|Carpa": { title: "Mix: ANGUILLA + CARPA", text: "Sei un connettore creativo. Hai il gusto dell’imprevisto ma senza perdere la gentilezza: cerchi l’armonia nel gruppo e allo stesso tempo sparigli con idee originali che fanno sorridere e riflettere. Con te le persone si sentono a proprio agio, perché riesci a combinare empatia e fantasia: sai coinvolgere, proporre alternative e trasformare un incontro normale in qualcosa di speciale." },
+  "Anguilla|Pesce Gatto": { title: "Mix: ANGUILLA + PESCE GATTO", text: "Ironia e immaginazione ti vengono naturali. Prendi la vita con leggerezza ma non per questo sei superficiale: la tua creatività spunta dove gli altri vedono routine, e spesso sei tu a cambiare l’umore di una stanza con una battuta o un’idea fuori dal coro. Spontaneo, versatile, sorprendi senza fare rumore e lasci dietro di te buonumore e curiosità." },
+  "Anguilla|Siluro": { title: "Mix: ANGUILLA + SILURO", text: "Visione e azione: sogni soluzioni diverse e poi trovi il modo di farle accadere davvero. Hai il coraggio di osare e la fantasia per tracciare strade nuove. Guida naturale, ma mai scontata: la tua energia è magnetica e inviti gli altri a buttarsi in esperienze che raccontano chi sei, con una scintilla di sana follia." },
+  "Anguilla|Storione": { title: "Mix: ANGUILLA + STORIONE", text: "Originale con profondità. Ami esplorare strade non battute, ma lo fai con giudizio e memoria. Sai dare un senso alle novità, collegandole a ciò che conta davvero. Le persone si fidano di te perché unisci creatività e saggezza: non cerchi solo l’effetto wow, ma un significato che resti." },
+  "Carpa|Pesce Gatto": { title: "Mix: CARPA + PESCE GATTO", text: "Il tuo superpotere è portare leggerezza nelle relazioni. Fai gruppo, smorzi i conflitti e ricordi agli altri che si può stare bene anche nelle piccole cose. Sei accogliente e scanzonato al punto giusto: con te, ogni cena ha il suo momento di risate sincere e feeling vero." },
+  "Carpa|Siluro": { title: "Mix: CARPA + SILURO", text: "Guida e ascolto: sai tenere il timone senza perdere di vista chi hai accanto. Pratico, deciso, ma capace di creare unità: trasformi gli obiettivi in azione e ti assicuri che tutti si sentano parte del viaggio. Il risultato? Una spinta in avanti che non schiaccia nessuno." },
+  "Carpa|Storione": { title: "Mix: CARPA + STORIONE", text: "Stabilità che rassicura. Dai valore a tradizioni, memoria e qualità del tempo insieme. Quando c’è bisogno di equilibrio, sei il punto fermo: ascolti, organizzi, riporti calma. Le persone ti cercano perché con te ritrovano serenità e chiarezza, senza bisogno di grandi effetti speciali." },
+  "Pesce Gatto|Siluro": { title: "Mix: PESCE GATTO + SILURO", text: "Carisma con sorriso. Ti butti nelle cose e trascini gli altri, ma con quella ironia che rende tutto più leggero. Sei energia che unisce: sai alleggerire la tensione, motivare e accendere l’entusiasmo del gruppo. Impossibile non seguirti — e divertirsi." },
+  "Pesce Gatto|Storione": { title: "Mix: PESCE GATTO + STORIONE", text: "Leggerezza consapevole. Sai quando scherzare e quando andare a fondo: alterni momenti ironici a riflessioni che restano. Stai bene nelle tradizioni, ma ci metti il tuo tocco brillante. Il risultato è un equilibrio unico tra profondità e spontaneità." },
+  "Siluro|Storione": { title: "Mix: SILURO + STORIONE", text: "Decisione con visione lunga. Prendi in mano le situazioni con fermezza e responsabilità, ragionando sul quadro d’insieme. Affidabile e autorevole, ispiri fiducia perché unisci coraggio e prudenza: sai accelerare quando serve, ma con una rotta chiara." }
 };
 function tieKey(a,b){ return [a,b].sort().join("|"); }
 
@@ -266,8 +236,6 @@ function computeResult(){
   const data = new FormData(form);
   const scores = {"Pesce Gatto":0,"Siluro":0,"Storione":0,"Carpa":0,"Anguilla":0};
   const missing = [];
-  if(!data.get('nomeCognome')) missing.push("Nome e Cognome");
-  if(!data.get('cittaProvincia')) missing.push("Città e Provincia");
   QUESTIONS.forEach((_, i) => {
     const key = `q${i+1}`;
     const val = data.get(key);
@@ -284,6 +252,7 @@ function computeResult(){
 }
 
 function tieKey(a,b){ return [a,b].sort().join("|"); }
+const TIE = (a,b) => ({ title: `Mix: ${FISH[a].title} + ${FISH[b].title}`, text: "Parità perfetta tra stili diversi: unisci qualità complementari e ti adatti alle situazioni con naturalezza." });
 
 function showResult(winners){
   let title, text, badgesHtml;
@@ -294,12 +263,8 @@ function showResult(winners){
     badgesHtml = `<span class="badge">🏅 ${FISH[w].title}</span>`;
   } else if (winners.length === 2) {
     const key = tieKey(winners[0], winners[1]);
-    const tie = TIE_RESULTS[key];
-    if (tie) { title = tie.title; text = tie.text; }
-    else {
-      title = "Risultato: Mix " + winners.join(" + ");
-      text  = "Parità perfetta tra stili diversi: unisci qualità complementari e ti adatti alle situazioni con naturalezza.";
-    }
+    const tie = TIE_RESULTS[key] || TIE(winners[0], winners[1]);
+    title = tie.title; text = tie.text;
     badgesHtml = winners.map(w => `<span class="badge">🏅 ${FISH[w].title}</span>`).join(" ");
   } else {
     const elenco = winners.map(w => FISH[w].title).join(", ");
@@ -315,7 +280,7 @@ function showResult(winners){
 }
 
 /* ====== HANDLERS ====== */
-form.addEventListener('submit', (e) => {
+document.getElementById('btn-submit').addEventListener('click', (e) => {
   e.preventDefault();
   const r = computeResult(); if(!r) return;
   showResult(r.winners);
